# noapi-v2.0

./: .gitignore  CMakeLists.txt  LICENSE  README.md
examples/: auto_features.cpp  shadowed_scene.cpp  simple_triangle.cpp  textured_cube.cpp  textured_cube_alg.cpp  textured_cube_alg.h
examples/shadowed_scene/: shadowed_scene.cpp  sm_shader.cpp  sm_shader.h  tex_shader.cpp  tex_shader.h
examples/simple_triangle/: simple_shader.cpp  simple_shader.h  simple_triangle.cpp
examples/textured_cube/: textured_cube.cpp  textured_cube_alg.cpp  textured_cube_alg.h
examples/utils/obj_loader/: Mesh.cpp  Mesh.h
include/noapi/: IShader.h  Lerper.h  attribute_checker.h  choose.h  common_structures.h  cpuvsps.h  integer_sequence.h  tuple_repr.h  vsps_auto_fetch.h  vsps_auto_interpolate.h  vsps_clipping.h
src/: IShader.h  cpuvsps.h  integer_sequence.h  main.cpp  vsps_shader.h
